# exponentiating_formulae

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  SHOW.h  cbh_formulae.cpp  danyu.cpp  environment.h  forward_transformer.cpp  main.cpp  oldmain.cpp  temp.txt  test.cpp
.github/workflows/: cmake.yml
headers/libalgebra/: alternative_multiplications.h
